# ds-tools

./: .gitignore  01_Visualise_Matplotlib.ipynb  02_Visualise_Seaborn.ipynb  03_Visualise_3D.ipynb  04_Visualise_Net_Graph.ipynb  05_Animation_Matplotlib.ipynb  07_Metrics.ipynb  08_LearningCurves.ipynb  08_Pandas_CUDA_Cores.ipynb  09_KNN_classifier.ipynb  10_PCA-tSNE.ipynb  10_PCA-tSNE_dimentionality_Reduction.ipynb  10_SVM+kernels_classification.ipynb  11_Clustring_k-means_DBSCAN.ipynb  11_lgbm_classification.ipynb  13_DimeReduction_PCA_tSNE_tSVD.ipynb  13_Euler_formula_phase_coords.ipynb  13_RecomendingEngine.ipynb  14_ANN_activation_functions.ipynb  14_AnomalyDetection_with_DBSCAN.ipynb  15_CNN+ImageGenerators.ipynb  15_Clustering_metrics.ipynb  15_SVD_and_Keras_in_Recommending_Engines.ipynb  16_CNN_Image_classification.ipynb  16_RecomendingEngine.ipynb  16_SVD_and_Keras_in_Recommending_Engines.ipynb  17_SVD_Surplrise_RecommendingMovieLens.ipynb  19_NLP_embeddings.ipynb  1_Visualise_Matplotlib.ipynb  21_ArXiv_RAG_Maestro.ipynb  21_NLP_embeddings.ipynb  23_Pandas_CUDA_Cores.ipynb  24_Stats_basics.ipynb  25_Multicollinearity_detection_with_VIF.ipynb  26_Model_Selection_Akaike_AIC_BIC_information_criterion.ipynb  7_Metrics.ipynb  README.md  pyproject.toml
data-visualisation/: Animation_matplotlib.ipynb  Google_test.ipynb  README.md  Visualisation_tips.ipynb  pyproject.toml
sandbox/: simplify_polynom_regexp.py
tsne-pca/: test.py  tsne-pca.py
