[tool.poetry]
name = "ds-tools"
version = "0.1.0"
description = ""
authors = ["chernegi <chernega.ivan@gmail.com>"]
readme = "README.md"
packages = [{include = "ds_tools"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
tensorflow-decision-forests = "^1.3.0"
pandas = "^2.0.2"
scikit-learn = "^1.2.2"
jupyterlab = "^3.6.3"
jupyterlab-system-monitor = "^0.8.0"
matplotlib = "^3.7.1"
ffmpeg = "^1.4"
seaborn = "^0.12.2"
networkx = "^3.1"
pyvis = "^0.3.2"
dash = "^2.10.2"
visdcc = "^0.0.50"
ipykernel = "^6.25.2"
numpy = "^1.26.2"
mlxtend = "^0.23.1"
nltk = "^3.8.1"
spacy = "^3.7.4"
wordcloud = "^1.9.3"
lightgbm = "^4.3.0"
graphviz = "^0.20.3"
statsmodels = "^0.14.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
